# Blackboard

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
blackboard/: __init__.py  routes.py
blackboard/static/css/: style.css
blackboard/templates/: base.html  index.html
